Got testing working. Still need to get JaCoCo working.