@@ -6,6 +6,7 @@
         <groupId>com.bewsoftware</groupId>
         <artifactId>bewsoftware-libs</artifactId>
         <version>3.0.2-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>bewsoftware-pom</artifactId>
@@ -14,20 +15,12 @@
     <name>BEWSoftware POM</name>
     <description>This is the parent pom for all of the sub-projects.</description>
 
-    <properties>
-        <manual.source>src/docs/manual</manual.source>
-        <manual.target>docs</manual.target>
-        <spotbugs.skip>true</spotbugs.skip>
-        <skip.version.build>true</skip.version.build>
-        <javadoc.attach></javadoc.attach>
-    </properties>
-
     <profiles>
         <profile>
             <id>developer-api</id>
             <properties>
                 <javadoc.linksource>true</javadoc.linksource>
-                <javadoc.outputDirectory>${manual.source}/apidocs</javadoc.outputDirectory>
+                <!--<javadoc.outputDirectory>${manual.source}</javadoc.outputDirectory>-->
                 <javadoc.show>private</javadoc.show>
                 <javadoc.skip>false</javadoc.skip>
                 <javadoc.attach>false</javadoc.attach>
@@ -86,7 +79,7 @@
             <id>Javadoc-std</id>
             <properties>
                 <javadoc.linksource>true</javadoc.linksource>
-                <javadoc.outputDirectory>${manual.source}/apidocs</javadoc.outputDirectory>
+                <javadoc.outputDirectory></javadoc.outputDirectory>
                 <javadoc.attach>false</javadoc.attach>
                 <javadoc.skip>false</javadoc.skip>
             </properties>
@@ -94,7 +87,7 @@
         <profile>
             <id>Javadoc-std-attached</id>
             <properties>
-                <javadoc.outputDirectory>${manual.source}/apidocs</javadoc.outputDirectory>
+                <javadoc.outputDirectory></javadoc.outputDirectory>
                 <javadoc.skip>false</javadoc.skip>
             </properties>
         </profile>
@@ -568,16 +561,20 @@
                             </execution>
                         </executions>
                     </plugin>
-
                 </plugins>
             </build>
         </profile>
-
+        <profile>
+            <id>spotbugs</id>
+            <properties>
+                <spotbugs.skip>false</spotbugs.skip>
+            </properties>
+        </profile>
         <profile>
             <id>test</id>
             <properties>
-                <spotbugs.skip>false</spotbugs.skip>
                 <maven.test.skip>false</maven.test.skip>
+                <jacoco.skip>false</jacoco.skip>
             </properties>
         </profile>
     </profiles>
@@ -675,7 +672,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
-                    <encoding>${project.build.sourceEncoding}</encoding>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <!--<arg>-Xlint:all</arg>-->
@@ -686,9 +682,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
             </plugin>
             <!-- Used for unit tests -->
             <plugin>
@@ -696,15 +689,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- Sets the VM argument line used when unit tests are run. -->
-                    <argLine>${surefire.args}</argLine>
+                    <argLine>${surefireArgs}</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <configuration>
-                    <locales>en</locales>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -714,6 +704,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
+
             <!--================== Maven JavaDoc ==================-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -750,7 +741,7 @@
                     <bottom>
                         Copyright © {currentYear} Bradley Willcott. All rights reserved.
                     </bottom>
-                    <!--<reportOutputDirectory>${javadoc.outputDirectory}</reportOutputDirectory>-->
+                    <outputDirectory>${javadoc.outputDirectory}</outputDirectory>
                     <tags>
                         <tag>
                             <name>Note</name>
@@ -834,14 +825,15 @@
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.7.3</version>
+                        <version>4.8.6</version>
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <skip>${spotbugs.skip}</skip>
-                    <effort>Max</effort>
-                    <threshold>Low</threshold>
-                    <xmlOutput>true</xmlOutput>
+                    <effort>Min</effort>
+                    <threshold>High</threshold>
+                    <!--<xmlOutput>true</xmlOutput>-->
+                    <failThreshold>High</failThreshold>
+                    <failOnError>false</failOnError>
                 </configuration>
                 <executions>
                     <execution>
@@ -851,24 +843,163 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <executions>
+                    <!--
+                        Prepares the property pointing to the JaCoCo runtime agent which
+                        is passed as VM argument when Maven the Surefire plugin is executed.
+                    -->
+                    <execution>
+                        <id>pre-unit-test</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <destFile>${jacoco.ut.execution.data.file}</destFile>
+                            <!--
+                                Sets the name of the property containing the settings
+                                for JaCoCo runtime agent.
+                            -->
+                            <propertyName>surefireArgs</propertyName>
+                        </configuration>
+                    </execution>
+                    <!--
+                        Ensures that the code coverage report for unit tests is created after
+                        unit tests have been run.
+                    -->
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the path to the file which contains the execution data. -->
+                            <dataFile>${jacoco.ut.execution.data.file}</dataFile>
+                            <!-- Sets the output directory for the code coverage report. -->
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-    <!--
+
     <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <configuration>
+                    <linkJavadoc>true</linkJavadoc>
+                    <!--<javadocDir>${javadoc.reporting.outputDirectory}/${project.artifactId}</javadocDir>-->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <reportSets>
+                    <reportSet><!-- by default, id = "default" -->
+                        <reports><!-- select non-aggregate reports -->
+                            <report>javadoc</report>
+                            <report>test-javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+                <configuration>
+                    <skip>${javadoc.skip}</skip>
+                    <show>${javadoc.show}</show>
+                    <doctitle>${javadoc.title}</doctitle>
+                    <header>${javadoc.header}</header>
+                    <overview>${project.build.directory}/classes/javadoc/overview.html</overview>
+                    <docfilessubdirs>true</docfilessubdirs>
+                    <source>${javadoc.source.version}</source>
+                    <links>
+                        <link>${javadoc.link.url.jdk}</link>
+                    </links>
+                    <linksource>${javadoc.linksource}</linksource>
+                    <removeUnknownThrows>false</removeUnknownThrows>
+                    <minmemory>128m</minmemory>
+                    <maxmemory>1g</maxmemory>
+                    <additionalOptions>
+                        --enable-preview
+                    </additionalOptions>
+                    <bottom>
+                        Copyright © {currentYear} Bradley Willcott. All rights reserved.
+                    </bottom>
+                    <outputDirectory>${javadoc.outputDirectory}</outputDirectory>
+                    <tags>
+                        <tag>
+                            <name>Note</name>
+                            <placement>a</placement>
+                            <head>Note:</head>
+                        </tag>
+                        <tag>
+                            <name>apiNote</name>
+                            <placement>a</placement>
+                            <head>API Note:</head>
+                        </tag>
+                        <tag>
+                            <name>implSpec</name>
+                            <placement>a</placement>
+                            <head>Implementation Requirements:</head>
+                        </tag>
+                        <tag>
+                            <name>implNote</name>
+                            <placement>a</placement>
+                            <head>Implementation Note:</head>
+                        </tag>
+                        <tag>
+                            <name>param</name>
+                        </tag>
+                        <tag>
+                            <name>return</name>
+                        </tag>
+                        <tag>
+                            <name>throws</name>
+                        </tag>
+                        <tag>
+                            <name>since</name>
+                        </tag>
+                        <tag>
+                            <name>version</name>
+                        </tag>
+                        <tag>
+                            <name>author</name>
+                        </tag>
+                        <tag>
+                            <name>serialData</name>
+                        </tag>
+                        <tag>
+                            <name>see</name>
+                        </tag>
+                        <tag>
+                            <name>todo</name>
+                            <placement>a</placement>
+                            <head>To Do:</head>
+                        </tag>
+                    </tags>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
                 <reportSets>
                     <reportSet>
                         <reports>
+                            <!-- select non-aggregate reports -->
                             <report>report</report>
                         </reports>
                     </reportSet>
                 </reportSets>
             </plugin>
         </plugins>
-    </reporting>-->
-
+    </reporting>
 </project>
